Implemented an application object.

--- a/juliasm/juliasm.rc
+++ b/juliasm/juliasm.rc
@@ -43,12 +43,16 @@ BEGIN
         MENUITEM "E&xit",                IDM_EXIT
     END
     POPUP "&Calculate"
-    BEGIN
-        MENUITEM "SSE",                IDM_CALCULATE_SSE
-        MENUITEM "SSE2",                IDM_CALCULATE_SSE2
-        MENUITEM "x87",                IDM_CALCULATE_X87
-        MENUITEM "Clear Screen",                IDM_CLEAR
-    END
+	BEGIN
+		MENUITEM "Recalculate"				IDM_RECALCULATE_MAND
+		MENUITEM "x87", IDM_CALCULATE_MAND_X87
+		MENUITEM "SSE", IDM_CALCULATE_MAND_SSE
+		MENUITEM "SSE2", IDM_CALCULATE_MAND_SSE2
+		MENUITEM "AVX", IDM_CALCULATE_MAND_AVX
+		MENUITEM "AVX2", IDM_CALCULATE_MAND_AVX2
+		MENUITEM "Clear Screen", IDM_CLEAR_MAND
+		MENUITEM "Reset", IDM_RESET_MAND
+		END
     POPUP "&Iterations"
     BEGIN
         MENUITEM "64",                IDM_ITERATIONS_64
