Enhanced Julia set user interface Added CPU capability identification cleaned up some code.

--- a/juliasm/juliasm.rc
+++ b/juliasm/juliasm.rc
@@ -42,29 +42,51 @@ BEGIN
     BEGIN
         MENUITEM "E&xit",                IDM_EXIT
     END
-    POPUP "&Calculate"
+    POPUP "&Mandelbrot"
 	BEGIN
 		MENUITEM "Recalculate"				IDM_RECALCULATE_MAND
+		MENUITEM "Reset", IDM_RESET_MAND
+		MENUITEM "Clear Screen", IDM_CLEAR_MAND
+		MENUITEM SEPARATOR
 		MENUITEM "x87", IDM_CALCULATE_MAND_X87
 		MENUITEM "SSE", IDM_CALCULATE_MAND_SSE
 		MENUITEM "SSE2", IDM_CALCULATE_MAND_SSE2
 		MENUITEM "AVX", IDM_CALCULATE_MAND_AVX
 		MENUITEM "AVX2", IDM_CALCULATE_MAND_AVX2
-		MENUITEM "Clear Screen", IDM_CLEAR_MAND
-		MENUITEM "Reset", IDM_RESET_MAND
-		END
-    POPUP "&Iterations"
-    BEGIN
-        MENUITEM "64",                IDM_ITERATIONS_64
-        MENUITEM "128",                IDM_ITERATIONS_128
-        MENUITEM "256",                IDM_ITERATIONS_256
-        MENUITEM "512",                IDM_ITERATIONS_512
-        MENUITEM "1024",                IDM_ITERATIONS_1024
-        MENUITEM "2048",                IDM_ITERATIONS_2048
-        MENUITEM "4096",                IDM_ITERATIONS_4096
-        MENUITEM "8192",                IDM_ITERATIONS_8192
-        MENUITEM "16384",                IDM_ITERATIONS_16384
-        MENUITEM "32768",                IDM_ITERATIONS_32767
+		MENUITEM SEPARATOR
+        MENUITEM "64",		IDM_ITERATIONS_MAND_64
+        MENUITEM "128",		IDM_ITERATIONS_MAND_128
+        MENUITEM "256",		IDM_ITERATIONS_MAND_256
+        MENUITEM "512",		IDM_ITERATIONS_MAND_512
+        MENUITEM "1024",	IDM_ITERATIONS_MAND_1024
+        MENUITEM "2048",	IDM_ITERATIONS_MAND_2048
+        MENUITEM "4096",	IDM_ITERATIONS_MAND_4096
+        MENUITEM "8192",	IDM_ITERATIONS_MAND_8192
+        MENUITEM "16384",	IDM_ITERATIONS_MAND_16384
+        MENUITEM "32768",	IDM_ITERATIONS_MAND_32767
+	END
+    POPUP "&Julia"
+	BEGIN
+		MENUITEM "Recalculate"		IDM_RECALCULATE_JULIA
+		MENUITEM "Reset",			IDM_RESET_JULIA
+		MENUITEM "Clear Screen",	IDM_CLEAR_JULIA
+		MENUITEM SEPARATOR
+		MENUITEM "x87",				IDM_CALCULATE_JULIA_X87
+		MENUITEM "SSE",				IDM_CALCULATE_JULIA_SSE
+		MENUITEM "SSE2",			IDM_CALCULATE_JULIA_SSE2
+		MENUITEM "AVX",				IDM_CALCULATE_JULIA_AVX
+		MENUITEM "AVX2",			IDM_CALCULATE_JULIA_AVX2
+		MENUITEM SEPARATOR
+        MENUITEM "64",				IDM_ITERATIONS_JULIA_64
+        MENUITEM "128",				IDM_ITERATIONS_JULIA_128
+        MENUITEM "256",				IDM_ITERATIONS_JULIA_256
+        MENUITEM "512",				IDM_ITERATIONS_JULIA_512
+        MENUITEM "1024",			IDM_ITERATIONS_JULIA_1024
+        MENUITEM "2048",			IDM_ITERATIONS_JULIA_2048
+        MENUITEM "4096",			IDM_ITERATIONS_JULIA_4096
+        MENUITEM "8192",			IDM_ITERATIONS_JULIA_8192
+        MENUITEM "16384",			IDM_ITERATIONS_JULIA_16384
+        MENUITEM "32768",			IDM_ITERATIONS_JULIA_32767
 	END
 	POPUP "&Help"
     BEGIN
