Streamlined AVX julia-set calculation functions. Added a readme.

--- a/juliasm/juliasm.rc
+++ b/juliasm/juliasm.rc
@@ -51,7 +51,8 @@ BEGIN
 		MENUITEM "x87", IDM_CALCULATE_MAND_X87
 		MENUITEM "SSE", IDM_CALCULATE_MAND_SSE
 		MENUITEM "SSE2", IDM_CALCULATE_MAND_SSE2
-		MENUITEM "AVX", IDM_CALCULATE_MAND_AVX
+		MENUITEM "AVX 32-bit", IDM_CALCULATE_MAND_AVX32
+		MENUITEM "AVX 64-bit", IDM_CALCULATE_MAND_AVX64
 		MENUITEM "AVX2", IDM_CALCULATE_MAND_AVX2
 		MENUITEM SEPARATOR
         MENUITEM "64",		IDM_ITERATIONS_MAND_64
@@ -74,7 +75,8 @@ BEGIN
 		MENUITEM "x87",				IDM_CALCULATE_JULIA_X87
 		MENUITEM "SSE",				IDM_CALCULATE_JULIA_SSE
 		MENUITEM "SSE2",			IDM_CALCULATE_JULIA_SSE2
-		MENUITEM "AVX",				IDM_CALCULATE_JULIA_AVX
+		MENUITEM "AVX 32-bit",				IDM_CALCULATE_JULIA_AVX32
+		MENUITEM "AVX 64-bit",				IDM_CALCULATE_JULIA_AVX64
 		MENUITEM "AVX2",			IDM_CALCULATE_JULIA_AVX2
 		MENUITEM SEPARATOR
         MENUITEM "64",				IDM_ITERATIONS_JULIA_64
