--- a/juliasm/juliasm.vcxproj
+++ b/juliasm/juliasm.vcxproj
@@ -46,6 +46,7 @@
       <SDLCheck>true</SDLCheck>
       <EnableEnhancedInstructionSet>NoExtensions</EnableEnhancedInstructionSet>
       <FloatingPointExceptions>true</FloatingPointExceptions>
+      <AssemblerOutput>NoListing</AssemblerOutput>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -58,6 +59,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
+      <AssemblerOutput>NoListing</AssemblerOutput>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -70,7 +72,9 @@
     <ClCompile Include="CBitmap.cpp" />
     <ClCompile Include="CJuliasmApp.cpp" />
     <ClCompile Include="CJuliasmApp_Mand.cpp" />
-    <ClCompile Include="CJuliasmApp_Julia.cpp" />
+    <ClCompile Include="CJuliasmApp_Julia.cpp">
+      <AssemblerOutput Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">AssemblyAndSourceCode</AssemblerOutput>
+    </ClCompile>
     <ClCompile Include="CPalette.cpp" />
     <ClCompile Include="cpu.cpp" />
     <ClCompile Include="juliasm.cpp" />
@@ -94,6 +98,9 @@
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="juliasm.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="ReadMe.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
