--- a/juliasm/juliasm.vcxproj.filters
+++ b/juliasm/juliasm.vcxproj.filters
@@ -88,4 +88,7 @@
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="ReadMe.txt" />
+  </ItemGroup>
 </Project>
