Added SSE support to Julia Sets and AVX support to Mandelbrot sets

--- a/juliasm/juliasm.rc
+++ b/juliasm/juliasm.rc
@@ -53,7 +53,7 @@ BEGIN
 		MENUITEM "SSE2", IDM_CALCULATE_MAND_SSE2
 		MENUITEM "AVX 32-bit", IDM_CALCULATE_MAND_AVX32
 		MENUITEM "AVX 64-bit", IDM_CALCULATE_MAND_AVX64
-		MENUITEM "AVX2", IDM_CALCULATE_MAND_AVX2
+		MENUITEM "FMA", IDM_CALCULATE_MAND_FMA
 		MENUITEM SEPARATOR
         MENUITEM "64",		IDM_ITERATIONS_MAND_64
         MENUITEM "128",		IDM_ITERATIONS_MAND_128
@@ -77,7 +77,7 @@ BEGIN
 		MENUITEM "SSE2",			IDM_CALCULATE_JULIA_SSE2
 		MENUITEM "AVX 32-bit",				IDM_CALCULATE_JULIA_AVX32
 		MENUITEM "AVX 64-bit",				IDM_CALCULATE_JULIA_AVX64
-		MENUITEM "AVX2",			IDM_CALCULATE_JULIA_AVX2
+		MENUITEM "FMA",			IDM_CALCULATE_JULIA_FMA
 		MENUITEM SEPARATOR
         MENUITEM "64",				IDM_ITERATIONS_JULIA_64
         MENUITEM "128",				IDM_ITERATIONS_JULIA_128
