WORK IN PROGRESS - Adding OpenCL support

--- a/juliasm/juliasm.rc
+++ b/juliasm/juliasm.rc
@@ -54,6 +54,8 @@ BEGIN
 		MENUITEM "AVX 32-bit", IDM_CALCULATE_MAND_AVX32
 		MENUITEM "AVX 64-bit", IDM_CALCULATE_MAND_AVX64
 		MENUITEM "FMA", IDM_CALCULATE_MAND_FMA
+		MENUITEM "OpenCL CPU", IDM_CALCULATE_MAND_OPENCL_CPU
+		MENUITEM "OpenCL GPU", IDM_CALCULATE_MAND_OPENCL_GPU
 		MENUITEM SEPARATOR
         MENUITEM "64",		IDM_ITERATIONS_MAND_64
         MENUITEM "128",		IDM_ITERATIONS_MAND_128
@@ -78,6 +80,8 @@ BEGIN
 		MENUITEM "AVX 32-bit",				IDM_CALCULATE_JULIA_AVX32
 		MENUITEM "AVX 64-bit",				IDM_CALCULATE_JULIA_AVX64
 		MENUITEM "FMA",			IDM_CALCULATE_JULIA_FMA
+		MENUITEM "OpenCL CPU", IDM_CALCULATE_JULIA_OPENCL_CPU
+		MENUITEM "OpenCL GPU", IDM_CALCULATE_JULIA_OPENCL_GPU
 		MENUITEM SEPARATOR
         MENUITEM "64",				IDM_ITERATIONS_JULIA_64
         MENUITEM "128",				IDM_ITERATIONS_JULIA_128
