--- a/juliasm/juliasm.vcxproj.filters
+++ b/juliasm/juliasm.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="COpenCL.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CJuliasmApp_Dialog.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CPalette.h">
