--- a/juliasm/juliasm.rc
+++ b/juliasm/juliasm.rc
@@ -89,6 +89,12 @@ BEGIN
 		MENUITEM "FMA",			IDM_CALCULATE_JULIA_FMA
 		MENUITEM "OpenCL CPU", IDM_CALCULATE_JULIA_OPENCL_CPU
 		MENUITEM "OpenCL GPU", IDM_CALCULATE_JULIA_OPENCL_GPU
+		MENUITEM "Sin-OpenCL CPU", IDM_CALCULATE_SIN_JULIA_OPENCL_CPU
+		MENUITEM "Sin-OpenCL GPU", IDM_CALCULATE_SIN_JULIA_OPENCL_GPU
+		MENUITEM "Cos-OpenCL CPU", IDM_CALCULATE_COS_JULIA_OPENCL_CPU
+		MENUITEM "Cos-OpenCL GPU", IDM_CALCULATE_COS_JULIA_OPENCL_GPU
+		MENUITEM "Exp-OpenCL CPU", IDM_CALCULATE_EXP_JULIA_OPENCL_CPU
+		MENUITEM "Exp-OpenCL GPU", IDM_CALCULATE_EXP_JULIA_OPENCL_GPU
 		MENUITEM SEPARATOR
         MENUITEM "64",				IDM_ITERATIONS_JULIA_64
         MENUITEM "128",				IDM_ITERATIONS_JULIA_128
