Refactored OpenCL object to need only one per program.  Also improves performance. Made OpenCL initialize asynchronously.

--- a/juliasm/juliasm.rc
+++ b/juliasm/juliasm.rc
@@ -61,8 +61,8 @@ BEGIN
 		MENUITEM "AVX 32-bit", IDM_CALCULATE_MAND_AVX32
 		MENUITEM "AVX 64-bit", IDM_CALCULATE_MAND_AVX64
 		MENUITEM "FMA", IDM_CALCULATE_MAND_FMA
-		MENUITEM "OpenCL CPU", IDM_CALCULATE_MAND_OPENCL_CPU
-		MENUITEM "OpenCL GPU", IDM_CALCULATE_MAND_OPENCL_GPU
+		MENUITEM "OpenCL CPU", IDM_CALCULATE_MAND_OPENCL_CPU, GRAYED
+		MENUITEM "OpenCL GPU", IDM_CALCULATE_MAND_OPENCL_GPU, GRAYED
 		MENUITEM SEPARATOR
         MENUITEM "64",		IDM_ITERATIONS_MAND_64
         MENUITEM "128",		IDM_ITERATIONS_MAND_128
@@ -87,14 +87,14 @@ BEGIN
 		MENUITEM "AVX 32-bit",				IDM_CALCULATE_JULIA_AVX32
 		MENUITEM "AVX 64-bit",				IDM_CALCULATE_JULIA_AVX64
 		MENUITEM "FMA",			IDM_CALCULATE_JULIA_FMA
-		MENUITEM "OpenCL CPU", IDM_CALCULATE_JULIA_OPENCL_CPU
-		MENUITEM "OpenCL GPU", IDM_CALCULATE_JULIA_OPENCL_GPU
-		MENUITEM "Sin-OpenCL CPU", IDM_CALCULATE_SIN_JULIA_OPENCL_CPU
-		MENUITEM "Sin-OpenCL GPU", IDM_CALCULATE_SIN_JULIA_OPENCL_GPU
-		MENUITEM "Cos-OpenCL CPU", IDM_CALCULATE_COS_JULIA_OPENCL_CPU
-		MENUITEM "Cos-OpenCL GPU", IDM_CALCULATE_COS_JULIA_OPENCL_GPU
-		MENUITEM "Exp-OpenCL CPU", IDM_CALCULATE_EXP_JULIA_OPENCL_CPU
-		MENUITEM "Exp-OpenCL GPU", IDM_CALCULATE_EXP_JULIA_OPENCL_GPU
+		MENUITEM "OpenCL CPU", IDM_CALCULATE_JULIA_OPENCL_CPU, GRAYED
+		MENUITEM "OpenCL GPU", IDM_CALCULATE_JULIA_OPENCL_GPU, GRAYED
+		MENUITEM "Sin-OpenCL CPU", IDM_CALCULATE_SIN_JULIA_OPENCL_CPU, GRAYED
+		MENUITEM "Sin-OpenCL GPU", IDM_CALCULATE_SIN_JULIA_OPENCL_GPU, GRAYED
+		MENUITEM "Cos-OpenCL CPU", IDM_CALCULATE_COS_JULIA_OPENCL_CPU, GRAYED
+		MENUITEM "Cos-OpenCL GPU", IDM_CALCULATE_COS_JULIA_OPENCL_GPU, GRAYED
+		MENUITEM "Exp-OpenCL CPU", IDM_CALCULATE_EXP_JULIA_OPENCL_CPU, GRAYED
+		MENUITEM "Exp-OpenCL GPU", IDM_CALCULATE_EXP_JULIA_OPENCL_GPU, GRAYED
 		MENUITEM SEPARATOR
         MENUITEM "64",				IDM_ITERATIONS_JULIA_64
         MENUITEM "128",				IDM_ITERATIONS_JULIA_128
